[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provenex-core"
version = "0.1.0"
description = "Cryptographic provenance verification for enterprise RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Provenex" }]
keywords = ["rag", "provenance", "ai", "compliance", "fingerprinting", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core has zero third-party dependencies. Pure stdlib by design.
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3,<0.4"]
llamaindex = ["llama-index-core>=0.10,<0.13"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
provenex = "provenex.cli.main:main"

[project.urls]
Homepage = "https://provenex.ai"
Repository = "https://github.com/provenex/provenex-core"
Documentation = "https://provenex.ai/docs"

[tool.setuptools.packages.find]
include = ["provenex*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["provenex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
