[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provenex-core"
version = "0.6.2"
description = "Policy enforcement for AI data access, with cryptographic proof"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Provenex" }]
keywords = ["rag", "provenance", "ai", "policy", "security", "compliance", "fingerprinting", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core has zero third-party dependencies. Pure stdlib by design.
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3,<0.4"]
llamaindex = ["llama-index-core>=0.10,<0.13"]
# LangGraph users get trajectory-aware retrieval nodes plus state helpers.
# The integration itself imports nothing from langgraph (LangGraph nodes
# are just callables); this extra exists for discoverability.
langgraph = ["langgraph>=0.2,<0.3"]
# CrewAI users get a session-scoped trajectory + a tool wrapper that emits
# trajectory-linked receipts on every tool call. As with langgraph, the
# integration imports nothing from crewai — this extra is for discovery.
crewai = ["crewai>=0.55"]
# Adds Ed25519 asymmetric signing so auditors can verify receipts without
# holding the signing key. The core remains pure-stdlib without this extra.
ed25519 = ["cryptography>=42.0"]
# Native YAML data-access policy DSL (schema 1.5.0). The evaluator imports
# PyYAML lazily and raises a clear error if this extra is missing, so the
# core remains pure-stdlib for users who don't author policies in YAML.
policy = ["PyYAML>=6.0"]
# Postgres-backed provenance index for multi-node / production deployments.
# Imports psycopg lazily; the SQLite backend (and the core) remain pure
# stdlib without this extra.
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "cryptography>=42.0",
    "PyYAML>=6.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.scripts]
provenex = "provenex.cli.main:main"

[project.urls]
Homepage = "https://provenex.ai"
Repository = "https://github.com/provenex/provenex-core"
Documentation = "https://provenex.ai/docs"

[tool.setuptools.packages.find]
include = ["provenex*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["provenex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
